<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/youtube_white">

    <ImageView
        android:id="@+id/iv_bgStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/splash_screen_style"
        android:scaleType="fitXY"
        android:src="@drawable/bg_abstract_shapes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_splashBook"
        android:layout_width="wrap_content"
        android:layout_height="298dp"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/man_on_book"
        android:src="@drawable/man_on_book"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_splash_welcome"
        style="@style/TextAppearance.Title.Splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/welcome_to"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_splashBook" />

    <TextView
        android:id="@+id/tv_splash_title"
        style="@style/TextAppearance.Title.Splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="39sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_splashBook" />

</androidx.constraintlayout.widget.ConstraintLayout>