<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginTop="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/profile_image_background">

        <FrameLayout
            android:id="@+id/fl_quiz_source_container"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_quiz_icon"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_quiz_source"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:contentDescription="@string/create_quiz_from_document"
                android:src="@drawable/ic_document_file"
                app:tint="@color/text_primary_dark" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_quiz_topic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/quiz_title"
            android:textColor="@color/text_primary_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/btn_go_to_quiz"
            app:layout_constraintStart_toEndOf="@id/fl_quiz_source_container"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_quiz_accuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:text="@string/accuracy"
            android:textColor="@color/text_secondary_gray"
            android:textSize="14sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@id/tv_quiz_time"
            app:layout_constraintStart_toEndOf="@id/fl_quiz_source_container"
            app:layout_constraintTop_toBottomOf="@id/tv_quiz_topic"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_quiz_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="12dp"
            android:text="@string/time"
            android:textColor="@color/text_secondary_gray"
            android:textSize="14sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/fl_quiz_source_container"
            app:layout_constraintTop_toBottomOf="@id/tv_quiz_accuracy" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_go_to_quiz"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:contentDescription="@string/quiz_button"
            android:focusable="true"
            android:src="@drawable/ic_arrow_forward_white"
            app:backgroundTint="@color/secondary_action_blue"
            app:fabCustomSize="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@android:color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>